# nghien2025

./: README.md  admin_routes.py  app.py  auth_service.py  database_service.py  file_service.py  merchant_app.py  merchant_routes.py  models.py  populate_sample_data.py  pyproject.toml  requirements.txt
static/admin/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
static/admin/src/: App.tsx  main.tsx
static/admin/src/domains/registration/: registrations.tsx
static/admin/src/domains/transactions/: transactions.tsx
static/admin/src/domains/user/: dashboard.tsx  settings.tsx
static/admin/src/domains/verification/: verifications.tsx
static/admin/src/shared/: index.css  not-found.tsx  types.ts
static/admin/src/shared/components/layout/: header.tsx  sidebar.tsx
static/admin/src/shared/lib/: auth.ts  queryClient.ts
static/merchant/css/: style.css
static/merchant/js/: main.js
templates/merchant/: faq.html  index.html  register.html  solutions.html  verify.html
